--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ duplicity==0.8.21
 fasteners==0.14.1
 filelock==3.6.0
 future==0.18.2
-gyp==0.1
+gunicorn==20.1.0
 httplib2==0.20.2
 idna==3.3
 importlib-metadata==4.6.4
@@ -67,7 +67,7 @@ SecretStorage==3.3.1
 six==1.16.0
 sqlparse==0.4.4
 systemd-python==234
-typing_extensions==4.8.0
+typing-extensions==4.8.0
 ubuntu-advantage-tools==8001
 ubuntu-drivers-common==0.0.0
 ufw==0.36.1
@@ -82,4 +82,3 @@ zipp==1.0.0
 python-dotenv==0.21.0
 psycopg2-binary==2.9.5
 dj-database-url==1.2.0
-gunicorn==20.1.0
