--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ asgiref==3.7.2
 bcrypt==3.2.0
 blinker==1.4
 certifi==2020.6.20
+cffi==1.16.0
 chardet==4.0.0
 click==8.0.3
 colorama==0.4.4
@@ -13,12 +14,14 @@ defer==1.0.6
 distlib==0.3.4
 distro==1.7.0
 distro-info==1.1+ubuntu0.1
+dj-database-url==1.2.0
 Django==4.2.6
 duplicity==0.8.21
 fasteners==0.14.1
 filelock==3.6.0
 future==0.18.2
 gunicorn==20.1.0
+gyp==0.1
 httplib2==0.20.2
 idna==3.3
 importlib-metadata==4.6.4
@@ -44,8 +47,10 @@ pexpect==4.8.0
 Pillow==9.0.1
 platformdirs==2.5.1
 protobuf==3.12.4
+psycopg2-binary==2.9.5
 ptyprocess==0.7.0
 pycairo==1.20.1
+pycparser==2.21
 pycups==2.0.1
 PyGObject==3.42.1
 pyinstaller==6.1.0
@@ -58,6 +63,7 @@ pyRFC3339==1.1
 python-apt==2.4.0+ubuntu2
 python-dateutil==2.8.1
 python-debian==0.1.43+ubuntu1.1
+python-dotenv==0.21.0
 pytz==2022.1
 pyxdg==0.27
 PyYAML==5.4.1
@@ -67,7 +73,7 @@ SecretStorage==3.3.1
 six==1.16.0
 sqlparse==0.4.4
 systemd-python==234
-typing-extensions==4.8.0
+typing_extensions==4.8.0
 ubuntu-advantage-tools==8001
 ubuntu-drivers-common==0.0.0
 ufw==0.36.1
@@ -79,6 +85,3 @@ wadllib==1.3.6
 xdg==5
 xkit==0.0.0
 zipp==1.0.0
-python-dotenv==0.21.0
-psycopg2-binary==2.9.5
-dj-database-url==1.2.0
