--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ asgiref==3.7.2
 bcrypt==3.2.0
 blinker==1.4
 certifi==2020.6.20
-cffi==1.16.0
+# cffi==1.16.0
 chardet==4.0.0
 click==8.0.3
 colorama==0.4.4
