--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ dbus-python==1.2.18
 # defer==1.0.6
 distlib==0.3.4
 distro==1.7.0
-distro-info==1.1+ubuntu0.1
+# distro-info==1.1+ubuntu0.1
 dj-database-url==1.2.0
 Django==4.2.6
 duplicity==0.8.21
