--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ distro==1.7.0
 # distro-info==1.1+ubuntu0.1
 dj-database-url==1.2.0
 Django==3.2.6
-duplicity==0.8.21
+# duplicity==0.8.21
 fasteners==0.14.1
 filelock==3.6.0
 future==0.18.2
