--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ fasteners==0.14.1
 filelock==3.6.0
 future==0.18.2
 gunicorn==20.1.0
-gyp==0.1
+# gyp==0.1
 httplib2==0.20.2
 idna==3.3
 importlib-metadata==4.6.4
