--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ idna==3.3
 importlib-metadata==4.6.4
 jeepney==0.7.1
 keyring==23.5.0
-language-selector
+# language-selector
 launchpadlib==1.10.16
 lazr.restfulclient==0.14.4
 lazr.uri==1.0.6
