--- a/requirements.txt
+++ b/requirements.txt
@@ -53,8 +53,8 @@ pycairo==1.20.1
 pycparser==2.21
 pycups==2.0.1
 PyGObject==3.42.1
-pyinstaller==6.1.0
-pyinstaller-hooks-contrib==2023.10
+# pyinstaller==6.1.0
+# pyinstaller-hooks-contrib==2023.10
 PyJWT==2.3.0
 pymacaroons==0.13.0
 PyNaCl==1.5.0
