--- a/requirements.txt
+++ b/requirements.txt
@@ -76,7 +76,7 @@ sqlparse==0.4.4
 # typing_extensions==4.8.0
 # ubuntu-advantage-tools==8001
 # ubuntu-drivers-common==0.0.0
-ufw==0.36.1
+# ufw==0.36.1
 unattended-upgrades==0.1
 urllib3==1.26.5
 usb-creator==0.3.7
