--- a/requirements.txt
+++ b/requirements.txt
@@ -77,7 +77,7 @@ sqlparse==0.4.4
 # ubuntu-advantage-tools==8001
 # ubuntu-drivers-common==0.0.0
 # ufw==0.36.1
-unattended-upgrades==0.1
+# unattended-upgrades==0.1
 urllib3==1.26.5
 usb-creator==0.3.7
 virtualenv==20.13.0+ds
