--- a/requirements.txt
+++ b/requirements.txt
@@ -79,7 +79,7 @@ sqlparse==0.4.4
 # ufw==0.36.1
 # unattended-upgrades==0.1
 urllib3==1.26.5
-usb-creator==0.3.7
+# usb-creator==0.3.7
 virtualenv==20.13.0+ds
 wadllib==1.3.6
 xdg==5
