--- a/requirements.txt
+++ b/requirements.txt
@@ -80,8 +80,8 @@ sqlparse==0.4.4
 # unattended-upgrades==0.1
 urllib3==1.26.5
 # usb-creator==0.3.7
-virtualenv==20.13.0+ds
+# virtualenv==20.13.0+ds
 wadllib==1.3.6
-xdg==5
-xkit==0.0.0
-zipp==1.0.0
+# xdg==5
+# xkit==0.0.0
+# zipp==1.0.0
