--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 altgraph==0.17.4
-apturl==0.5.2
 asgiref==3.7.2
 bcrypt==3.2.0
 blinker==1.4
-Brlapi==0.8.3
+Brlapi
 certifi==2020.6.20
 cffi==1.16.0
 chardet==4.0.0
@@ -18,7 +17,7 @@ distlib==0.3.4
 distro==1.7.0
 distro-info==1.1+ubuntu0.1
 dj-database-url==1.2.0
-Django==4.2.6
+Django
 duplicity==0.8.21
 fasteners==0.14.1
 filelock==3.6.0
