--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ altgraph==0.17.4
 asgiref==3.7.2
 bcrypt==3.2.0
 blinker==1.4
-Brlapi
+Brlapi==0.6.4
 certifi==2020.6.20
 cffi==1.16.0
 chardet==4.0.0
